added link github to footer

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,8 @@
     margin: 30px auto;
     border: 1px solid blue;
     border-radius: 5px;
-    padding:  20px;}
+    padding:  20px;
+}
     h1{
         color: #878787;
     
